log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
        - name: hashgenerator
          image: log-generator:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-file
              mountPath: /app/logs
        - name: log-server
          image: log-server:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-file
              mountPath: /app/logs
            - name: pong-file
              mountPath: /app/pong
      volumes:
        - name: log-file
          emptyDir: {}
        - name: pong-file
          persistentVolumeClaim:
            claimName: pong-claim
